// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NowPlayingCard > matches snapshot when paused 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="block w-full no-underline"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="nowplaying--spotify relative w-full grid grid-cols-[auto_1fr] items-center gap-x-8 gap-y-4 px-8 py-7 rounded-3xl overflow-hidden border border-white/14 dark:border-white/14 bg-[#121212] text-white shadow-[0_8px_20px_rgba(0,0,0,0.35)] dark:shadow-[0_8px_20px_rgba(0,0,0,0.35)] backdrop-blur-md"
    style="opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="relative w-14 h-14 rounded-xl overflow-hidden shadow-[0_8px_20px_rgba(0,0,0,0.35)] dark:shadow-[0_8px_20px_rgba(0,0,0,0.35)]"
    >
      <img
        alt="Album"
        class="w-full h-full rounded-xl object-cover transition-transform duration-[900ms] ease-[cubic-bezier(.22,.61,.36,1)] scale-[1.012] hover:scale-[1.02]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="min-w-0 flex flex-col gap-3"
    >
      <h3
        class="np-title text-base font-extrabold leading-[1.2] tracking-[-0.01em] text-white"
      >
        Test Track
      </h3>
      <p
        class="np-art text-sm opacity-90 text-[#b3b3b3]"
      >
        Tester
      </p>
      <span
        aria-hidden="true"
        class="self-start px-4 py-1.5 rounded-full text-[10px] font-bold uppercase tracking-wide bg-white/10 text-white/80 border border-white/20"
      >
        Paused
      </span>
      <div
        class="flex items-center gap-4 w-full"
      >
        <div
          class="flex-1 h-1.5 rounded-full bg-[#2a2a2a] overflow-hidden"
        >
          <div
            aria-label="Track progress"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="16.666666666666664"
            class="h-full bg-[#1db954] rounded-full transition-all duration-300 ease-out"
            role="progressbar"
            style="width: 16.666666666666664%;"
          />
        </div>
        <span
          class="np-time text-xs whitespace-nowrap text-[#b3b3b3]"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`NowPlayingCard > matches snapshot when playing 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="block w-full no-underline"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="nowplaying--spotify relative w-full grid grid-cols-[auto_1fr] items-center gap-x-8 gap-y-4 px-8 py-7 rounded-3xl overflow-hidden border border-white/14 dark:border-white/14 bg-[#121212] text-white shadow-[0_8px_20px_rgba(0,0,0,0.35)] dark:shadow-[0_8px_20px_rgba(0,0,0,0.35)] backdrop-blur-md"
    style="opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="relative w-14 h-14 rounded-xl overflow-hidden shadow-[0_8px_20px_rgba(0,0,0,0.35)] dark:shadow-[0_8px_20px_rgba(0,0,0,0.35)]"
    >
      <img
        alt="Album"
        class="w-full h-full rounded-xl object-cover transition-transform duration-[900ms] ease-[cubic-bezier(.22,.61,.36,1)] scale-[1.012] hover:scale-[1.02]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="min-w-0 flex flex-col gap-3"
    >
      <h3
        class="np-title text-base font-extrabold leading-[1.2] tracking-[-0.01em] text-white"
      >
        Test Track
      </h3>
      <p
        class="np-art text-sm opacity-90 text-[#b3b3b3]"
      >
        Tester
      </p>
      <div
        class="flex items-center gap-4 w-full"
      >
        <div
          class="flex-1 h-1.5 rounded-full bg-[#2a2a2a] overflow-hidden"
        >
          <div
            aria-label="Track progress"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="16.666666666666664"
            class="h-full bg-[#1db954] rounded-full transition-all duration-300 ease-out"
            role="progressbar"
            style="width: 16.666666666666664%;"
          />
        </div>
        <span
          class="np-time text-xs whitespace-nowrap text-[#b3b3b3]"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;
